# prod_inside_out

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  Readme.md  TODO  const.py  pyproject.toml
api-enricher/: .env
api-enricher/src/: api_handler.py  config.py
api-enricher/src/data/: mapper.json
docker-compose/: makefile  prices-feature-pipeline.yml  redpanda.yml  sec-feature-pipeline.yml  system-names.json
docker-compose/shared_modules/: feature_store.py
docker-compose/system-inference/: inference-feature.env  inference-master.env  inference-scraper.env  inference-target.env  inference-yahoo.env  services-inference.yml
docker-compose/system-training/: .env  services-training.yml  training-feature.env  training-master.env  training-scraper.env  training-target.env  training-yahoo.env
inference/: .env  .env-inference-enricher.env  .env-inference-master.env  .env-inference-scraper.env  Dockerfile  Makefile  pyproject.toml  requirements.txt
inference/src/: __init__.py  alpaca.py  config.py  feature_groups.yaml  feature_store.py  inference_pipeline.py  main.py  paths.py
lab/: lab.py
master-index/: .env
master-index/src/: main.py
prices-feature-pipeline/: Makefile
prices-feature-pipeline/avg-target/: .env  pyproject.toml
prices-feature-pipeline/avg-target/src/: config.py  feature_store.py  main.py  returns_module.py
prices-feature-pipeline/yahoo_connect/: .env  Dockerfile  pyproject.toml
prices-feature-pipeline/yahoo_connect/src/: __init__.py  clean.py  config.py  feature_groups.yaml  feature_store.py  ingestion.py  main.py
prices-feature-pipeline/yahoo_connect/tests/: test.py
scraper/: .env  pyproject.toml
scraper/src/: config.py  main.py  parser.py  transaction.py
sec-feature-pipeline/: Makefile
sec-feature-pipeline/api-enricher/: .env  Dockerfile  pyproject.toml
sec-feature-pipeline/api-enricher/src/: __init__.py  api_handler.py  config.py  main.py
sec-feature-pipeline/api-enricher/src/data/: test.py
sec-feature-pipeline/docker-compose/: redpanda.yml
sec-feature-pipeline/kafka-to-store/: .env  Dockerfile  pyproject.toml
sec-feature-pipeline/kafka-to-store/src/: __init__.py  clean.py  config.py  feature_groups.yaml  feature_store.py  kafka_topic.py  main.py
sec-feature-pipeline/master-index/: .env  Dockerfile  pyproject.toml
sec-feature-pipeline/master-index/src/: __init__.py  config.py  main.py  monitor_live.py
sec-feature-pipeline/scraper/: .env  Dockerfile  pyproject.toml
sec-feature-pipeline/scraper/src/: __init__.py  config.py  const.py  main.py  parser.py  transaction.py
training/: .env  Dockerfile  Makefile  pyproject.toml  requirements.txt
training/src/: __init__.py  config.py  feature_store.py  helper.py  logs  main.py  paths.py  preprocessing.py  simulation.py
training/src/models/: automl.py
