[tool.poetry]
name = "inference"
version = "0.1.0"
description = "A project for inference pipeline"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26"
hopsworks = "^4.1.5"
scipy = "^1.15.1"
alpaca-trade-api = "^3.2.0"
pandas="<2.2.0"
loguru = "^0.7.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
h2o = "^3.46.0.6"
pyarrow = "^19.0.0"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"