[project]
name = "inference"
version = "0.1.0"
description = "Loads the trained H2O model, scores the latest features, and optionally places orders via Alpaca."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==1.26.*",
    "hopsworks>=4.1.5,<5.0.0",
    "scipy>=1.15.1,<2.0.0",
    "alpaca-trade-api>=3.2.0,<4.0.0",
    "pandas<2.2.0",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "h2o>=3.46.0.6,<4.0.0",
    "pyarrow>=19.0.0,<20.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "polars>=1.21.0,<2.0.0",
]

[tool.uv]
package = false
