[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["josemita87 <136491450+josemita87@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.24.4"
pandas = "^2.1.1"
hopsworks = "4.1.0"
dask = "^2024.11.2"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.1"
pyarrow = "^18.1.0"
confluent-kafka = "^2.7.0"
numba = "^0.60.0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
