[project]
name = "training"
version = "0.1.0"
description = "Trains an H2O AutoML regressor from feature-store data, runs a trading simulation, and persists the model."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "h2o==3.46.0.6",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "requests==2.32.3",
    "matplotlib==3.10.0",
    "numpy==2.2.1",
    "seaborn==0.13.2",
    "pydantic==2.7.0",
    "pydantic-settings==2.6.1",
]

[tool.uv]
package = false
