[tool.poetry]
name = "avg-target"
version = "0.1.0"
description = ""
authors = ["josema <savetudrac@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.1.0"
hopsworks = "^4.1.0"
dask = "^2024.11.2"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.1"
pyarrow = "^18.1.0"
confluent-kafka = "^2.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
