[project]
name = "yahoo-connect"
version = "0.1.0"
description = "Fetches price history from Yahoo Finance and incrementally updates the prices (P) feature group."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
# Compatible range for hopsworks and hsfs
requires-python = ">=3.10,<3.12"
dependencies = [
    # Hopsworks feature store comes from the shared clients package.
    "inside-out-clients[feature-store]",
    "pydantic-settings>=2.6.1,<3.0.0",
    "pandas>=2.1,<3.0.0",
    "yfinance>=0.2.49,<0.3.0",
    "pyarrow>=18.1.0,<19.0.0",
    "confluent-kafka>=2.7.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
inside-out-clients = { path = "../../packages/inside-out-clients" }
