[project]
name = "yahoo-connect"
version = "0.1.0"
description = "Fetches price history from Yahoo Finance and incrementally updates the prices (P) feature group."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
# Compatible range for hopsworks and hsfs
requires-python = ">=3.10,<3.12"
dependencies = [
    # Hopsworks feature store and the yfinance market-data client both come from
    # the shared clients package.
    "secform4strategy-clients[feature-store,market-data]",
    "pydantic-settings>=2.6.1,<3.0.0",
    "pandas>=2.1,<3.0.0",
    "pyarrow>=18.1.0,<19.0.0",
    "confluent-kafka>=2.7.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
secform4strategy-clients = { path = "../../packages/secform4strategy-clients" }
