[tool.poetry]
name = "api-enricher"
version = "0.1.0"
description = ""
authors = ["josema <savetudrac@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyarrow = "^18.0.0"
yfinance = "^0.2.48"
autopep8 = "^2.3.1"
loguru = "^0.7.2"
quixstreams = "^3.1.1"
xxhash = "^3.5.0"
pydantic-settings = "^2.6"
confluent-kafka = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
