[project]
name = "api-enricher"
version = "0.1.0"
description = "Enriches Form 4 transactions with metadata (market cap, exchange, SIC) from cached files and Yahoo Finance."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "pyarrow>=18.0.0,<19.0.0",
    "yfinance>=0.2.48,<0.3.0",
    "autopep8>=2.3.1,<3.0.0",
    "quixstreams>=3.1.1,<4.0.0",
    "xxhash>=3.5.0,<4.0.0",
    "pydantic-settings>=2.6,<3.0",
    "confluent-kafka>=2.6,<3.0",
]

[tool.uv]
package = false
