[project]
name = "api-enricher"
version = "0.1.0"
description = "Enriches Form 4 transactions with metadata (market cap, exchange, SIC) from cached files and Yahoo Finance."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    # Kafka (consume/produce/commit) and Yahoo Finance market data both come from
    # the shared clients package.
    "secform4strategy-clients[market-data,messaging]",
    "pandas>=2.2.3,<3.0.0",
    "pyarrow>=18.0.0,<19.0.0",
    "autopep8>=2.3.1,<3.0.0",
    "xxhash>=3.5.0,<4.0.0",
    "pydantic-settings>=2.6,<3.0",
]

[tool.uv]
package = false

[tool.uv.sources]
secform4strategy-clients = { path = "../../packages/secform4strategy-clients" }
