[tool.poetry]
name = "kafka-to-store"
version = "0.1.0"
description = ""
authors = ["josema <savetudrac@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
quixstreams = "^3.1.1"
pandas = "^2.1.0"
loguru = "^0.7.2"
autopep8 = "^2.3.1"
hopsworks = "^4.1.3"
python-dotenv = "^1.0.1"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


