[project]
name = "kafka-to-store"
version = "0.1.0"
description = "Consumes normalized Form 4 transactions from Kafka, cleans them, and writes to the feature store (BT4/BI4)."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "quixstreams>=3.1.1,<4.0.0",
    "pandas>=2.1.0,<3.0.0",
    "autopep8>=2.3.1,<3.0.0",
    "hopsworks>=4.1.3,<5.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyarrow>=18.1.0,<19.0.0",
]

[tool.uv]
package = false
