[project]
name = "kafka-to-store"
version = "0.1.0"
description = "Consumes normalized Form 4 transactions from Kafka, cleans them, and writes to the feature store (BT4/BI4)."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Kafka consumer + Hopsworks feature store come from the shared clients package.
    "inside-out-clients[feature-store,messaging]",
    "pandas>=2.1.0,<3.0.0",
    "autopep8>=2.3.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyarrow>=18.1.0,<19.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
inside-out-clients = { path = "../../packages/inside-out-clients" }
