[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["josema <savetudrac@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quixstreams = "^3.1.1"
pandas = "^2.2.3"
requests = "^2.32.3"
loguru = "^0.7.2"
autopep8 = "^2.3.1"
xxhash = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
