[project]
name = "master-index"
version = "0.1.0"
description = "SEC master-index service: discovers Form 4 filing links from EDGAR and produces them to Kafka."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "quixstreams>=3.1.1,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "autopep8>=2.3.1,<3.0.0",
    "xxhash>=3.5.0,<4.0.0",
    "selenium>=4.28.0,<5.0.0",
    "bs4>=0.0.2,<0.0.3",
    "undetected-chromedriver>=3.5.5,<4.0.0",
]

[tool.uv]
package = false
