[project]
name = "master-index"
version = "0.1.0"
description = "SEC master-index service: discovers Form 4 filing links from EDGAR and produces them to Kafka."
readme = "README.md"
authors = [{ name = "Josep Cubedo Macian", email = "136491450+josemita87@users.noreply.github.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    # Kafka (producer), SEC EDGAR HTTP, and the EDGAR live-link scraper all come
    # from the shared clients package (edgar-live carries Selenium + BeautifulSoup).
    "inside-out-clients[messaging,edgar,edgar-live]",
    "pandas>=2.2.3,<3.0.0",
    "autopep8>=2.3.1,<3.0.0",
    "xxhash>=3.5.0,<4.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
inside-out-clients = { path = "../../packages/inside-out-clients" }
